@@ -56,6 +56,7 @@
   *   - Renamed all driver termination *_ShutDown() functions to the more logical name *_Disable()
   *   - Reduced latency for executing the Start-Of-Frame events (if enabled in the user application)
   *   - Removed Pipe_ClearErrorFlags(), pipe error flags are now automatically cleared when Pipe_ClearError() is called
+  *   - Endpoint_ResetFIFO() renamed to Endpoint_ResetEndpoint(), to be consistent with the Pipe_ResetPipe() function name
   *  - Library Applications:
   *   - Changed the XPLAINBridge software UART to use the regular timer CTC mode instead of the alternative CTC mode
   *     via the Input Capture register, to reduce user confusion
